# hybridseq2seq

./: .gitignore  LICENSE  README.md  hybridseq2seq_env.yml  pyproject.toml
hybridseq2seq/data/: __init__.py  vocabulary.py
hybridseq2seq/hmds/: __init__.py  embedding.py  embedding_batched.py  embedding_np.py
hybridseq2seq/layers/: __init__.py  euclidean_attention.py  hybrid_transformer_decoder.py  hybrid_two_stack_transformer_decoder.py  hyperbolic_attention.py  hyperbolic_embedding.py  hyperbolic_linear_layer.py  hyperbolic_transformer_encoder.py  hyperbolic_transformer_layers.py  transformer_decoder.py  transformer_encoder.py  transformer_layers.py
hybridseq2seq/manifolds/: __init__.py  math.py  poincare_manifold.py
hybridseq2seq/models/: __init__.py  base.py  decoder.py  encoder.py  encoder_decoder.py  search.py
hybridseq2seq/tasks/: __init__.py  base.py  cogs.py  config.py  loss.py
hybridseq2seq/utils/: __init__.py  activations.py  download.py  logger.py
tests/: conftest.py
tests/data/: __init__.py  conftest.py  test_cogs_datamodule.py  test_dataset.py  test_gold_syntax_parser.py  test_semantic_parser.py  test_syntactic_parser.py  test_vocab.py
tests/hmds/: test_hmds_embeddings.py  test_hmds_embeddings_batch.py
tests/layers/: conftest.py  test_euclidean_attention.py  test_hybrid_decoder.py  test_hyperbolic_attention.py  test_hyperbolic_embed_hmds.py  test_hyperbolic_linear_transform.py  test_transformer_embeddings.py  test_transformer_encoder.py
tests/models/: test_base.py  test_decoder.py  test_encoder.py
tests/resources/: config.yaml  (+1 more)
(+22 files in other folders)
